--- a/Exercicios/ex022/Fundo005.html
+++ b/Exercicios/ex022/Fundo005.html
@@ -6,8 +6,8 @@
     <title>Fundo-005</title>
     <style>
         body{
-            background-image: url(wallpaper003.jpg);
-            background-position: right top;
+            background-image: url(imagens/wallpaper003.jpg);
+            background-position: bottom center;
             height: 98vh;
         }
     </style>
