--- a/Exercicios/ex022/imagens/Fundo006.html
+++ b/Exercicios/ex022/imagens/Fundo006.html
@@ -26,7 +26,11 @@
 <body>
     <main>
         <h1>Teste</h1>
+        
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati aperiam dolores cum pariatur dolore nobis eos nostrum quisquam accusantium soluta, consequatur vel magni quos dolor fugiat, reiciendis excepturi a ex. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati ducimus, tenetur voluptates repellat aperiam nemo! Dolores optio quod, voluptatem, similique qui temporibus placeat veniam nemo, molestiae quo explicabo mollitia non! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptas a id asperiores, architecto eos saepe eligendi quidem ex, praesentium consequuntur, quae enim deserunt cum dicta harum fugit commodi quod.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati aperiam dolores cum pariatur dolore nobis eos nostrum quisquam accusantium soluta, consequatur vel magni quos dolor fugiat, reiciendis excepturi a ex. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati ducimus, tenetur voluptates repellat aperiam nemo! Dolores optio quod, voluptatem, similique qui temporibus placeat veniam nemo, molestiae quo explicabo mollitia non! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptas a id asperiores, architecto eos saepe eligendi quidem ex, praesentium consequuntur, quae enim deserunt cum dicta harum fugit commodi quod.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati aperiam dolores cum pariatur dolore nobis eos nostrum quisquam accusantium soluta, consequatur vel magni quos dolor fugiat, reiciendis excepturi a ex. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati ducimus, tenetur voluptates repellat aperiam nemo! Dolores optio quod, voluptatem, similique qui temporibus placeat veniam nemo, molestiae quo explicabo mollitia non! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptas a id asperiores, architecto eos saepe eligendi quidem ex, praesentium consequuntur, quae enim deserunt cum dicta harum fugit commodi quod.</p>
+        
     </main>
 </body>
 </html>
