--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -11,6 +11,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th{
             border: 1px solid black;
@@ -23,6 +24,25 @@
         td.num{
             text-align: right;
         }
+        caption{
+            background-color: lightblue;
+            font-weight: bold;
+            font-size: 1.4em;
+            padding: 10px;
+        }
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+        tbody > tr:nth-child(even){ /*2n*/
+            background-color: lightblue;
+        }
+        tbody > tr:nth-child(odd){ /*2n-1*/
+            background-color: rgba(173, 216, 230, 0.521);
+        }
+
+
     </style>
 </head>
 <body>
@@ -39,10 +59,11 @@
     -->
 
     <table>
+        <caption>Populacao das Unidades Ferderativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>Populacao</th>
+                <th scope="col">Estado</th>
+                <th scope="col">Populacao</th>
             </tr>
         </thead>
 
@@ -79,10 +100,106 @@
                 <td>Pernambuco</td>
                 <td class="num">9 781 808</td>
             </tr>
+            <tr>
+                <td>Sao Paulo</td>
+                <td class="num">45 919 049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">17 264 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 366 189</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 411 923</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 930 634</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11 822 201</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11 466 630</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9 781 808</td>
+            </tr>
+            <tr>
+                <td>Sao Paulo</td>
+                <td class="num">45 919 049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">17 264 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 366 189</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 411 923</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 930 634</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11 822 201</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11 466 630</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9 781 808</td>
+            </tr>
+            <tr>
+                <td>Sao Paulo</td>
+                <td class="num">45 919 049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">17 264 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 366 189</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 411 923</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 930 634</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11 822 201</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11 466 630</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9 781 808</td>
+            </tr>
         </tbody>
 
         <tfoot>
-            <th>Total de Habitantes</th>
+            <th scope="row">Total de Habitantes</th>
             <td class="num"><strong>132.698.434</strong></td>
         </tfoot>
 
